FROMGIT: phy: rockchip-typec: Check for errors from tcphy_phy_init()

The function tcphy_phy_init() could return an error but the callers
weren't checking the return value.  They should.  In at least one case
while testing I saw the message "wait pma ready timeout" which
indicates that tcphy_phy_init() really could return an error and we
should account for it.

BUG=chromium:770412
TEST=Fake PHY failures and see that things recover now

Change-Id: I4925bbe8a24b00f485a1eaee2feec661512dc0cc
Signed-off-by: Douglas Anderson <dianders@chromium.org>
Reviewed-by: Guenter Roeck <groeck@chromium.org>
Signed-off-by: Kishon Vijay Abraham I <kishon@ti.com>
(cherry picked from git.kernel.org kishon/linux-phy.git fixes
 commit 2fb850092fd95198a0a4746f07b80077d5a3aa37)
Reviewed-on: https://chromium-review.googlesource.com/697888